// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should render with class contain "bg-pink-400" 1`] = `
<DocumentFragment>
  <button
    class="w-auto rounded-md border border-slate-300 px-4 py-2 leading-none text-slate-950 transition-all hover:bg-slate-300 bg-pink-400"
    data-testid="button-test"
  >
    Button Test
  </button>
</DocumentFragment>
`;

exports[`Button Component should render with text "Button Test" 1`] = `
<DocumentFragment>
  <button
    class="w-auto rounded-md border border-slate-300 bg-white px-4 py-2 leading-none text-slate-950 transition-all hover:bg-slate-300"
    data-testid="button-test"
  >
    Button Test
  </button>
</DocumentFragment>
`;
